src/index.css
/* ... */
.subscription-modal__box-confirmation {
  position: relative;
  display: flex;
  align-items: center;
  background: #fff;
  width: 90vw;
  height: 40vh;
  border-radius: 16px;
  max-width: 600px;
  text-align: center;
}

.subscription-modal__form {
  /* padding: 42px 0px 0 0px; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
  position: relative;
}

.subscription-form-item {
  width: 70%;
}

.form-subscription-modal__title {
  text-align: center;
  line-height: 1.3;
  padding: 0px 24px;
  font-size: 42px;
  font-weight: 700;
  /* color: #fff; */
  color: #000;
}

.form-subscription-modal__subtitle {
  font-size: 22px;
  font-weight: 400;
}

.subscription-modal__input {
  margin: 0 auto;
  /* width: 100%; */
  padding: 12px 24px;

  background-repeat: no-repeat;
  background-size: 18px 18px;
  background-color: transparent;
  background-position: 95% center;
  transition: transform 250ms ease-in-out;
  font-size: 14px;
  line-height: 18px;
  border-radius: 50px;
  border: 1px solid #575756;
  transition: all 250ms ease-in-out;
  backface-visibility: hidden;
  transform-style: preserve-3d;
}

.subscription-modal__close-modal-btn {
  position: absolute;
  top: 0;
  right: 1rem;
  font-size: 2rem;
  background: transparent;
  border-color: transparent;
  cursor: pointer;
  color: #000;
}

.subscription-modal__confirmation-message-box {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  /* align-items: center;
  justify-content: center; */
}

.subscription-modal__confirmation-message-box span {
  font-size: 38px;
}

.subscription-modal__confirmation-message-box p {
  font-size: 38px;
}

/* ============================= */
/* MODAL SUBSCRIPTION RESPONSIVE */
/* ============================= */

@media (max-width: 991.98px) {
}

@media (max-width: 767.98px) {
}

@media (max-width: 575.98px) {
  .subscription-modal__box {
    width: 50vw;
    height: 40vh;
  }

  .subscription-modal__box-confirmation {
    width: 50vw;
    height: 40vh;
  }
  .form-subscription-modal__title {
    font-size: 24px;
  }
  .form-subscription-modal__subtitle {
    font-size: 16px;
  }
}

/* ======================== */
/* ====Live Class page===== */
/* ======================== */

.live-class {
  margin: 24px auto;
  /* font-family: Sharpgrotesk20, sans-serif; */
}

.live-class__header {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 2rem;
}

.header-live-class__text-block {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.header-live-class__text-block__live {
  max-width: 12vw;
  text-align: center;
  padding: 6px 8px;
  border-radius: 8px;
  border: 1px solid #ff420e;
  /*   background-color: #fa9f86; */
  color: #ff420e;
}

.text-block-header-live-class__title {
  font-size: 40px;
  font-weight: 800;
  /* color: #fff; */
  color: #000;
}

.text-block-header-live-class__subtitle {
  font-size: 20px;
  font-weight: 400;
  /*  color: #000; */
}

.text-block-header-live-class__details {
  display: flex;
  align-items: center;
  gap: 1rem;
  flex-wrap: wrap;
  font-size: 16px;
  font-weight: 400;
}

.details-text-block-header-live-class__category {
  background-color: rgb(215, 35, 215);
  /* background-color: #e5771f; */

  padding: 6px 8px;
  border-radius: 8px;
  color: #fff;
}

.text-block-header-live-class__button {
  text-align: center;
  margin: 0 auto;
  width: 50%;
}

.header-live-class__image img {
  width: 100%;
  height: 100%;
  /* height: 30vh; */
  /* object-fit: cover; */
  object-position: ceter;
  border-radius: 16px;
}

/* ------GRID LAYOUTS--------*/

.live-class__main {
  /* display: flex;
  gap: 1rem;

  height: 650px;
  overflow: auto; */
  margin: 34px 0;
  gap: 2rem;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr 1fr auto auto auto; /* add more if nedded */
}

.main-live-class__content {
  grid-column: 1/3;
  grid-row: 1/2;

  /* flex: 0 1 70%;
  height: 1300px; */
}

.main-live-class__enrol-box {
  grid-column: 3/4;
  grid-row: 1/2;

  /* flex: 0 1 30%; */
  border: 1px solid #e3e3e3;
  border-radius: 18px;
}

.main-live-class__audience {
  grid-column: 1/4;
  grid-row: 2/3;
}

.main-live-class__benefits {
  grid-column: 1/3;
  grid-row: 3/4;
}

/* --------------------*/

.content-main-live-class__hosted-text {
  text-transform: uppercase;
  font-weight: 800;
  color: #000;
}

.content-main-live-class__creator {
  margin: 12px 0 0 0;
  display: flex;
  gap: 0.5rem;
}

.creator-content-main-live-class__image {
  /* width: 14%; */
  height: 14vh;
  overflow: hidden;
}

.creator-content-main-live-class__image img {
  display: block;
  margin: 0 auto;
  width: 100%;
  height: 100%;
  border-radius: 50px;
  object-fit: cover;
}

.creator-content-main-live-class__text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.5rem;
}

.text-creator-content-main-live-class__name {
  font-size: 14px;
  font-weight: 400;
  color: #000;
}

/* --------------------*/

.main-live-class__enrol-box {
  padding: 32px;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-self: flex-start;

  /* position: -webkit-sticky;
  position: sticky;
  top: 0; */
}

.enrol-box-main-live-class__details {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.enrol-box-main-live-class__price {
  text-align: center;
  font-size: 24px;
  font-weight: 500;
  line-height: 1.4;
  color: #000;
}

.enrol-box-main-live-class__separator {
  margin: 6px 0;
  background-color: rgba(0, 0, 0, 0.1);
  height: 1px;
  width: 100%;
}

.enrol-box-main-live-class__schedule {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-size: 14px;
  font-weight: 500;
}

.enrol-box-main-live-class__button {
  text-align: center;
}

.schedule-enrol-box-main-live-class__text {
  text-align: center;
  font-size: 14px;
  font-weight: 800;
  text-transform: uppercase;
  /* color: rgb(215, 35, 215); */
  color: #000;
}
/* ... */

